[gd_scene load_steps=2 format=3 uid="uid://c5gm26pre5rg5"]

[ext_resource type="Script" path="res://UI/cityBuildButton/cityBuildButton.gd" id="1_pppd5"]

[node name="CityBuildButton" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 175.0
script = ExtResource("1_pppd5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 175.0

[node name="PanelTitle" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 123.0
offset_bottom = 37.0
scale = Vector2(1.5, 1.5)
text = "Build New City"

[node name="ReqRegion" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 60.0
offset_right = 203.0
offset_bottom = 109.0
text = "Required Region: 
Barren, Plains, or Forest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConstructionCost" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 235.0
offset_top = 18.0
offset_right = 380.0
offset_bottom = 41.0
text = "Construction Cost:"
vertical_alignment = 1

[node name="ConstructionMats" type="Label" parent="Panel/ConstructionCost"]
layout_mode = 0
offset_left = 10.0
offset_top = 25.0
offset_right = 200.0
offset_bottom = 100.0
text = "Money:  15000
Food: 5000
Building Materials:  7500
"

[node name="BuildButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 210.0
offset_top = 128.0
offset_right = 390.0
offset_bottom = 164.0
text = "Insufficient Materials"

[node name="CityNameInput" type="LineEdit" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 128.0
offset_right = 210.0
offset_bottom = 164.0
placeholder_text = "City Name"
max_length = 13

[node name="BuildMenu Toggle" type="Button" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 128.0
offset_right = 453.0
offset_bottom = 159.0
scale = Vector2(1.5, 1.5)
toggle_mode = true
text = "City"

[connection signal="pressed" from="Panel/BuildButton" to="." method="_on_build_button_pressed"]
[connection signal="pressed" from="BuildMenu Toggle" to="." method="_on_build_menu_toggle_pressed"]
